# newapp

./: .flake8  .gitignore  README.md  manifest  pyproject.toml  sysinfo.py  u8mjvopfian1ghngkkajujknkjef9qn1.darc
.beads/: config.yaml  issues.jsonl  metadata.json
newapp/: .outworked
tasks/: prd-developer-system-insight-cli-tool.md  prd-os-version-output-feature.md
tests/: test_sysinfo.py
